Add beta chat message